# POO2_L3_Riviere

./: .gitignore  CMakeLists.txt  README.md  main.cpp
documentation/rapport/: Labo3_rapport_Zwick_Maziero.docx
documentation/uml/: Riviere.sly
river/: Controller.cpp  Controller.h  River.cpp  River.h
river/container/: Bank.cpp  Bank.h  Boat.cpp  Boat.h  Container.cpp  Container.h
river/person/: Child.cpp  Child.h  Daughter.cpp  Daughter.h  Father.cpp  Father.h  Mother.cpp  Mother.h  Person.cpp  Person.h  Policeman.cpp  Policeman.h  Robber.cpp  Robber.h  Son.cpp  Son.h
